# arbor

./: .env.bff  .env.example  .env.mock  .env.oidc  .env.staging  .gitignore  .prettierrc.json  BROWSER.md  CLAUDE.md  DEPLOY.md  FEATURES.md  README.bff.md  README.md  README.tsconfig.md  TODO.bff.md  arbo.code-workspace  arbor  arbor.code-workspace  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts  vitest.workspace.ts
.claude/: settings.json
deploy/: api.yaml  bff.yaml
doc/: error-handling.md  new-package.md  tsconfig.md  typed-router.md
plan/: 100.spike-data-loaders.md  101.data-loaders-impl.md  102.navigation-lifecycle.md  103.optimistic-prefetch.md  104.code-splitting.md  105.spike-tanstack-query.md  106.spike-tanstack-router-bridge.md  107.sse-browser-lifecycle.md  108.ws-browser-lifecycle.md  109.navigation-history.md  110.devtools.md  111.route-meta-tags.md  112.scroll-restoration.md  113.spike-router-store.md  114.router-reducer.md  115.react-tca-bindings.md  116.effect-streaming.md  117.router-store-loaders.md  118.store-devtools-integration.md  119.spike-ssr-foundations.md  120.router-adapter-static-router.md  121.loader-dehydration.md  122.head-management.md  123.render-route.md  124.bff-ssr-integration.md  125.streaming-ssr.md  126.ssr-tca-path.md  (+109 more)
tools/arbor-cli/: .gitignore  pyproject.toml
tools/arbor-cli/src/arbor_cli/: __main__.py  cmd_db.py  cmd_setup.py  commands.py  jsonl.py  ledger.py  main.py  models.py  pg.py  pg_store.py  queue.py  tui.py  util.py
(+195 files in other folders)
