[project]
name = "arbor-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.15",
    "graphviz>=0.21",
    "pydantic>=2.13.4",
    "textual>=8.2.7",
]

[project.scripts]
arbor = "arbor_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
